Initial commit for injecting data to mongo

--- a/custom.properties
+++ b/custom.properties
@@ -13,6 +13,9 @@ aggregate_rpt_pct2=95
 # Second percentile to display, defaults to 93%
 aggregate_rpt_pct3=99
 
+# Add autoflush option
+not_in_menu=jmeter.save.saveservice.autoflush=true
+
 #---------------------------------------------------------------------------
 # Custom Variables
 #---------------------------------------------------------------------------
