+ adding set in properties collection to mongo, + checks if all params are set

--- a/custom.properties
+++ b/custom.properties
@@ -1,6 +1,16 @@
 # This is the custom properties file where we put all modifications.
 
 #---------------------------------------------------------------------------
+# Optional MongoDB connection
+#---------------------------------------------------------------------------
+#
+mongodb.address=localhost
+mongodb.port=27017
+mongodb.dbname=logs_jmeter
+mongodb.name=name
+mongodb.password=pass
+
+#---------------------------------------------------------------------------
 # Aggregate Report and Aggregate Graph - configuration
 #---------------------------------------------------------------------------
 #
@@ -12,9 +22,6 @@ aggregate_rpt_pct1=90
 aggregate_rpt_pct2=95
 # Second percentile to display, defaults to 93%
 aggregate_rpt_pct3=99
-
-# Add autoflush option
-not_in_menu=jmeter.save.saveservice.autoflush=true
 
 #---------------------------------------------------------------------------
 # Custom Variables
