--- a/loadprofile.properties
+++ b/loadprofile.properties
@@ -13,3 +13,6 @@ target_throughput=10.0
 #test analysis criteria
 percentile=90
 percentile_threshold=500
+
+#Collection to upload results to mongodb
+mongodb.collection=test_collection2
