cleared the log files from commit, fixed an issue with configuration

--- a/custom.properties
+++ b/custom.properties
@@ -4,7 +4,7 @@
 # Optional MongoDB connection
 #---------------------------------------------------------------------------
 #
-mongodb.address=localhost2
+mongodb.address=localhost
 mongodb.port=27017
 mongodb.dbname=test_mongo
 mongodb.name=vladimir
